layout bugs fixed for projects section

--- a/styles/sass/main/_about.scss
+++ b/styles/sass/main/_about.scss
@@ -3,7 +3,6 @@ main{
     padding-top: 80px;
     .aboutContainer{
         padding: 5rem 0 0 0;
-        min-height: 100vh;
     }
 }
 
@@ -30,6 +29,7 @@ main{
 }
 
 @media only screen and (min-width: 992px){
+    
     .infoContainer{
         flex-wrap: nowrap;
         figure{
