--- a/styles/sass/main/_contact.scss
+++ b/styles/sass/main/_contact.scss
@@ -1,6 +1,6 @@
 // FORM styles.........
 .contactContainer{
-    margin-top: 15%;
+    margin-top: 10%;
 }
 .contactFormContainer{
     padding: 20px;
@@ -16,6 +16,7 @@
         }
         p{
             padding: 10px 50px;
+            text-align: left;
         }
     }
 }
@@ -35,14 +36,6 @@ input[type="email"]{
     width: 100%;
 }
 
-input[type="text"]{
-    border-left: 2px solid $baseColour;
-}
-
-input[type="email"]{
-    border-right: 2px solid $baseColour;
-}
-
 textarea[id="message"]{
     background-color: transparent;
     text-align: left;
@@ -58,6 +51,7 @@ textarea[id="message"]{
     width: 100%;
 }
 
+
 // Social Nav styles....
 .socialNav{
     display: flex;
@@ -69,7 +63,8 @@ textarea[id="message"]{
 
 @media only screen and (min-width: 992px){
     .contactContainer{
-        margin-top: 5%;
+        padding-top: 5rem;
+        margin: 0;
     }
     .contactFormContainer{
         grid-template-columns: 1fr 1fr;
